--- a/src/css/style.css
+++ b/src/css/style.css
@@ -344,3 +344,39 @@ html, body {
     align-items: center;
     justify-content: space-around;
 }
+.message {
+    width: 100%;
+    text-align: center;
+    color: green;
+    font-size: 22px;
+}
+.patientViewConatiner {
+    width: 80%;
+    margin: 40px auto;
+}
+/*
+#hideMe {
+    -moz-animation: cssAnimation 0s ease-in 5s forwards;
+     Firefox 
+    -webkit-animation: cssAnimation 0s ease-in 5s forwards;
+     Safari and Chrome 
+    -o-animation: cssAnimation 0s ease-in 5s forwards;
+     Opera 
+    animation: cssAnimation 0s ease-in 5s forwards;
+    -webkit-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
+}
+@keyframes cssAnimation {
+    to {
+        width:0;
+        height:0;
+        overflow:hidden;
+    }
+}
+@-webkit-keyframes cssAnimation {
+    to {
+        width:0;
+        height:0;
+        visibility:hidden;
+    }
+}*/
